--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
+# Intellij Specific
+*.iml
+.idea
+
+# scalastyle output
+scalastyle-output.xml
