--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.github.jleskovar.vanityaddressgen.VanityAddressGeneratorApplication</start-class>
+		<start-class>com.github.jleskovar.vanityaddressgen.Application</start-class>
 		<java.version>1.8</java.version>
 		<bitcoinj-core.version>0.12.3</bitcoinj-core.version>
 	</properties>
